# nt2py

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  shell.nix
.github/workflows/: publish.yml  unittests.yml
legacy/: reader.py
legacy/containers/: fields.py  particles.py  utils.py
nt2/: __init__.py  dashboard.py  data.py  export.py  read.py  utils.py
nt2/cli/: __main__.py  main.py
nt2/containers/: container.py  data.py  diagnostics.py  fields.py  particles.py  spectra.py  utils.py
nt2/plotters/: annotations.py  export.py  inspect.py  movie.py  particles.py  polar.py  polarplot.py
nt2/readers/: adios2.py  base.py  hdf5.py
nt2/tests/: .gitattributes  cases.py  conftest.py  test_cli.py  test_containers.py  test_export.py  test_reader.py  test_tokenize.py
tests/: test_containers.py  test_reader.py
tests/testdata/h5_2d_cart_cpu/fields/: fields.00000001.h5  fields.00000011.h5  fields.00000021.h5  fields.00000026.h5  fields.00000031.h5  fields.00000036.h5  fields.00000041.h5  fields.00000061.h5  fields.00000066.h5  fields.00000071.h5
tests/testdata/h5_2d_cart_cpu/particles/: particles.00000001.h5  particles.00000011.h5  particles.00000021.h5  particles.00000031.h5  particles.00000041.h5  particles.00000051.h5  particles.00000061.h5
tests/testdata/h5_2d_cart_gpu/fields/: fields.00000001.h5  fields.00000016.h5  fields.00000021.h5  fields.00000026.h5  fields.00000031.h5  fields.00000041.h5  fields.00000051.h5  fields.00000056.h5  fields.00000066.h5  fields.00000071.h5  fields.00000076.h5  fields.00000081.h5
tests/testdata/h5_2d_cart_gpu/particles/: particles.00000001.h5  particles.00000011.h5  particles.00000031.h5  particles.00000051.h5  particles.00000061.h5
tests/testdata/h5_2d_cart_gpu/spectra/: spectra.00000001.h5  spectra.00000003.h5  spectra.00000007.h5  spectra.00000013.h5  spectra.00000017.h5  spectra.00000021.h5  spectra.00000023.h5  spectra.00000025.h5  spectra.00000027.h5  spectra.00000033.h5  spectra.00000035.h5  spectra.00000037.h5  spectra.00000039.h5  spectra.00000041.h5  spectra.00000045.h5  spectra.00000049.h5  spectra.00000053.h5  spectra.00000055.h5  spectra.00000057.h5  spectra.00000059.h5  spectra.00000061.h5  spectra.00000067.h5  spectra.00000071.h5  spectra.00000075.h5  spectra.00000077.h5
tests/testdata/h5_3d_cart_cpu/fields/: fields.00000001.h5  fields.00000011.h5  fields.00000013.h5  fields.00000017.h5  fields.00000027.h5  fields.00000029.h5  fields.00000033.h5  fields.00000035.h5  fields.00000039.h5  fields.00000049.h5  fields.00000057.h5  fields.00000061.h5  fields.00000067.h5  fields.00000069.h5
tests/testdata/h5_3d_cart_cpu/particles/: particles.00000001.h5  particles.00000013.h5  particles.00000017.h5  particles.00000025.h5  particles.00000029.h5  particles.00000037.h5  particles.00000045.h5  particles.00000065.h5  particles.00000069.h5
tests/testdata/h5_3d_cart_cpu/spectra/: spectra.00000001.h5
tests/testdata/h5_3d_cart_gpu/particles/: particles.00000001.h5  particles.00000005.h5  particles.00000009.h5  particles.00000013.h5  particles.00000017.h5  particles.00000021.h5  particles.00000025.h5  particles.00000029.h5  particles.00000033.h5  particles.00000037.h5  particles.00000041.h5
tests/testdata/h5_3d_cart_gpu/spectra/: spectra.00000001.h5  spectra.00000006.h5  spectra.00000011.h5  spectra.00000016.h5  spectra.00000021.h5  spectra.00000026.h5  spectra.00000031.h5  spectra.00000036.h5  spectra.00000041.h5
