[metadata]
name = nt2py
version = attr: nt2.__version__
description = Post-processing & visualization toolkit for the Entity PIC code
author = haykh
author_email = haykh.astro@gmail.com
license = BSD 3-Clause License
url = https://github.com/entity-toolkit/nt2

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
install_requires =
  types-setuptools
  numpy
  scipy